Variable parameters moved to config file

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 POSTGRES_USER=demouser
 POSTGRES_PASSWORD=DemoPass
 POSTGRES_DB=demodb
+NODE_APP_DEFAULT_LINK=http://node:8081/node/api/v1/result
+JAR_FILE_NAME=spring-boot-app-1.0-SNAPSHOT.jar
+CONF_FILE=my-conf.yml
+GIT_REPO=https://github.com/kkenan/basic-microservices
